package org.example.account;

public enum AccountStatus {
    ACTIVE, BLOCKED
}
