package org.example.client;

public enum CardStatus {
    ACTIVE, BLOCKED, EXPIRED
}
