package org.example.transaction;

public enum TransactionStatus {
    PENDING, COMPLETED, FAILED
}
